--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MindCare - Mental Health Support for Students</title>
+    <title>MindCare • Wellness & Support</title>
     <meta name="description" content="Stigma-free, accessible mental health support platform for students. AI-guided chat, confidential counselling, and peer community." />
     <meta name="author" content="MindCare" />
     <meta name="keywords" content="mental health, student support, counselling, therapy, anxiety, depression, wellness" />
@@ -11,11 +11,27 @@
     <meta property="og:title" content="MindCare - Mental Health Support for Students" />
     <meta property="og:description" content="Stigma-free, accessible mental health support platform for students. AI-guided chat, confidential counselling, and peer community." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@mindcare" />
+    <meta name="twitter:image" content="/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <style>
+      html, body { height: 100%; }
+      body {
+        margin: 0;
+        background: radial-gradient(1200px 600px at 10% 10%, rgba(56,189,248,.25), transparent 60%),
+                    radial-gradient(1000px 500px at 90% 20%, rgba(20,184,166,.25), transparent 60%),
+                    radial-gradient(800px 600px at 50% 90%, rgba(249,115,22,.15), transparent 60%),
+                    linear-gradient(135deg, #F0F9FF 0%, #ECFEFF 50%, #FFF7ED 100%);
+        font-family: 'Plus Jakarta Sans', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji';
+      }
+      #root { isolation: isolate; }
+    </style>
   </head>
 
   <body>
